# diss-code

./: .gitignore  AGENTS.md  DISSERTATION_GUIDE.md  README.md  voxel_downsample_normals.py
hamilton/: README.md  setup.sh  train_146.sbatch
registration/: __init__.py  _se3_np.py  fpfh_features.py  se3_utils.py  teaser_registration.py  weighted_svd.py
repair_simulation/: CMakeLists.txt  package.xml  setup.py
repair_simulation/launch/: camera_pipeline.launch.py  full_pipeline.launch.py  grasp_executor.launch.py
repair_simulation/repair_simulation/: __init__.py  camera_capture.py  grasp_executor.py  hand_eye.py  perception_bridge.py
scripts/: batch_evaluate.py  batch_preprocess.py  benchmark_teaser_vs_icp.py  compute_fpfh.py  create_scene_pair.py  cvar_grasp_validator.py  cvar_sensitivity.py  evaluate_registration.py  export_for_blender.py  export_pipeline_glb.py  force_closure.py  fpfh_parameter_sweep.py  generate_synthetic_fragments.py  grasp_experiment.py  mc_dropout_variance.py  mc_pose_covariance.py  ros2_simulate_scene.py  sample_candidates.json  segment_cluttered_scene.py  synthesize_cluttered_scene.py  teaser_register.py  train_geotransformer.py  visual_pipeline_test.py  visualize_pipeline.py
tests/: _eval_helpers.py  _fc_helpers.py  conftest.py  test_evaluation_metrics.py  test_force_closure.py  test_pose_covariance.py  test_se3_utils.py
uncertainty/: __init__.py  geotransformer.py  mc_inference.py  pose_covariance.py  variance_cloud.py
